Play icon mobile fixes

--- a/html/sass/layout/home/_desktop.scss
+++ b/html/sass/layout/home/_desktop.scss
@@ -93,7 +93,7 @@ $dbannerhgt: 965px;
         width: 40px;
         height: 40px;
         position: absolute;
-        top: 18px;
+        top: -42px;
         right: 0;
         z-index: 999999;
         z-index: 9999999;
