--- a/src/ManasquanBank.Web/css/style.css
+++ b/src/ManasquanBank.Web/css/style.css
@@ -3597,7 +3597,7 @@ footer {
   width: 40px;
   height: 40px;
   position: absolute;
-  top: 18px;
+  top: -42px;
   right: 0;
   z-index: 999999;
   z-index: 9999999;
